--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h1>Meows</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Message</th>
+      <th>Meow</th>
       <th>User</th>
+      <th>Time</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +16,8 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.message %></td>
-        <td><%= post.user %></td>
+        <td><%= post.user.username %></td>
+        <td><%= post.created_at%></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
