--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,12 @@
   <%= @post.user.email %>
 </p>
 
+<p>
+  <strong>Likes:</strong>
+  <%= @post.likers_count %>
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
-<%= link_to @follow_status, toggle_follow_post_path(user_id: @post.user_id) %>
+<%= link_to 'Back', posts_path %> |
+<%= link_to @follow_status, toggle_follow_post_path(user_id: @post.user_id) %> |
 <%= link_to @like_status, toggle_like_post_path(user_id: @user) %>
