More layout changes

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <table>
@@ -27,3 +28,5 @@
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+
+</div>
