--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,4 +1,5 @@
   <nav>
+  <div class="container">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Meower</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -14,5 +15,6 @@
           </li>
         <% end %>
       </ul>
+    </div>
     </div>
   </nav>
