--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Post</h1>
+<div class="container">
+<h4>Compose new meow</h4>
 
 <%= render 'form', post: @post %>
 
 <%= link_to 'Back', posts_path %>
+</div>
