--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -11,7 +12,7 @@
 </p>
 
 <p>
-  <strong>Likes:</strong>
+  <strong>&hearts;</strong>
   <%= @post.likers_count %>
 </p>
 
@@ -19,3 +20,4 @@
 <%= link_to 'Back', posts_path %> |
 <%= link_to @follow_status, toggle_follow_post_path(user_id: @post.user_id) %> |
 <%= link_to @like_status, toggle_like_post_path(user_id: @user) %>
+</div>
