--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_area :message %>
   </div>
 
+  <span class="picture">
+    <%= f.file_field :picture %>
+  </span>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
